--- a/main/templates/achievement.html
+++ b/main/templates/achievement.html
@@ -44,41 +44,31 @@
             				<p>Documents</p>
             			</div>
             		</div>
-		<form role="form" action="/industrial/" method="post" enctype="multipart/form-data">{% csrf_token %}		
-                    <fieldset>
+		<form role="form" action="/research/" method="post" enctype="multipart/form-data">{% csrf_token %}		
+                    <fieldset style="color:black;">
                         <div style="display:none;" class="col-md-12 form-group">
-            			    <label>Faculty: <span>*</span></label>
+            			         <label>Faculty: <span>*</span></label>
                             {% render_field form.faculty class="form-control required" %}
                         </div>
-                         <div class="col-md-12 form-group">
-            			    <label>Organisation: <span>*</span></label>
-                            {% render_field form.organisation class="form-control required" %}
-                        </div>
-                         <div class="col-md-12 form-group">
-            			    <label>Position Held: <span>*</span></label>
-                            {% render_field form.position_held class="form-control required" %}
-                        </div>
-                         <div class="col-md-12 form-group">
-            			    <label>From Date: <span>*</span></label>
-                            {% render_field form.from_date class="form-control required" %}
-                        </div>
-                         <div class="col-md-12 form-group">
-            			    <label>To Date: <span>*</span></label>
-                            {% render_field form.to_date class="form-control required" %}
-                        </div>
-                         <div class="col-md-12 form-group">
-            			    <label>Experience Years: <span>*</span></label>
-                            {% render_field form.experience_years class="form-control required" %}
-                        </div>
-                        <div class="col-md-12 form-group">
-                        	<label>Any Special Remarks</label>
-                        	<textarea class="form-control"></textarea>
-                        </div>
-                        <div class="form-wizard-buttons">
-                            <button type="submit" class="btn btn-next">Submit</button>
-                        </div>
+                        <table class="table table-bordered">
+                          <tr>
+                            <th>Community Service</th>
+                            <th>Industry Related</th>
+                            <th>University Assignment</th>
+                            <th>Administration</th>
+                          </tr>
+                          <tr>
+                            <td>{% render_field form.community_service class="form-control required" %}</td>
+                            <td>{% render_field form.industry_related class="form-control required" %}</td>
+                            <td>{% render_field form.university_assignment class="form-control required" %}</td>
+                            <td>{% render_field form.administration class="form-control required" %}</td>  
+                          </tr>
+                        </table>
                     </fieldset>
-				</form>
+                    <div class="form-wizard-buttons">
+                        <button type="submit" class="btn btn-next">Submit</button>
+                    </div>
+				        </form>
 				<!-- Form Wizard -->
             </div>
         </div>     
