--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -1,6 +1,216 @@
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
+<!DOCTYPE HTML>
+{% load widget_tweaks %}
+{% load static %}
+<head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+</head>
+<body>
+<section class="form-box" >
+    <div class="container">
+
+
+        <div class="row">
+            <div class="col-md-12 form-wizard">
+			
+			<center><img height="80" width="80" src="https://bmsit.ac.in/assets/logo-5527329e306f832982eb5b10b8325a606bc2058ae61b4aa5705c8c2d4e436212.png"></center><br>	<!-- Form Wizard -->
+
+            		<h3>BMS Institute of Technology</h3>
+                <p>Sign Up</p>
+		<form role="form" action="/educational/" method="post" enctype="multipart/form-data">{% csrf_token %}		
+                    <fieldset>
+                      {{form.as_p}}
+                      <div class="form-wizard-buttons">
+                        <button type="submit" class="btn btn-next">Submit</button>
+                    </div>
+                    </fieldset>
+		</form>
+				<!-- Form Wizard -->
+            </div>
+        </div>
+            
+    </div>
+</section>
+
+<script type="text/javascript">
+	"use strict";
+function scroll_to_class(element_class, removed_height) {
+	var scroll_to = $(element_class).offset().top - removed_height;
+	if($(window).scrollTop() != scroll_to) {
+		$('.form-wizard').stop().animate({scrollTop: scroll_to}, 0);
+	}
+}
+
+function bar_progress(progress_line_object, direction) {
+	var number_of_steps = progress_line_object.data('number-of-steps');
+	var now_value = progress_line_object.data('now-value');
+	var new_value = 0;
+	if(direction == 'right') {
+		new_value = now_value + ( 100 / number_of_steps );
+	}
+	else if(direction == 'left') {
+		new_value = now_value - ( 100 / number_of_steps );
+	}
+	progress_line_object.attr('style', 'width: ' + new_value + '%;').data('now-value', new_value);
+}
+
+jQuery(document).ready(function() {
+    
+    /*
+        Form
+    */
+    $('.form-wizard fieldset:first').fadeIn('slow');
+    
+    $('.form-wizard .required').on('focus', function() {
+    	$(this).removeClass('input-error');
+    });
+    
+    // next step
+    $('.form-wizard .btn-next').on('click', function() {
+    	var parent_fieldset = $(this).parents('fieldset');
+    	var next_step = true;
+    	// navigation steps / progress steps
+    	var current_active_step = $(this).parents('.form-wizard').find('.form-wizard-step.active');
+    	var progress_line = $(this).parents('.form-wizard').find('.form-wizard-progress-line');
+    	
+    	// fields validation
+    	parent_fieldset.find('.required').each(function() {
+    		if( $(this).val() == "" ) {
+    			$(this).addClass('input-error');
+    			next_step = false;
+    		}
+    		else {
+    			$(this).removeClass('input-error');
+    		}
+    	});
+    	// fields validation
+    	
+    	if( next_step ) {
+    		parent_fieldset.fadeOut(400, function() {
+    			// change icons
+    			current_active_step.removeClass('active').addClass('activated').next().addClass('active');
+    			// progress bar
+    			bar_progress(progress_line, 'right');
+    			// show next step
+	    		$(this).next().fadeIn();
+	    		// scroll window to beginning of the form
+    			scroll_to_class( $('.form-wizard'), 20 );
+	    	});
+    	}
+    	
+    });
+    
+    // previous step
+    $('.form-wizard .btn-previous').on('click', function() {
+    	// navigation steps / progress steps
+    	var current_active_step = $(this).parents('.form-wizard').find('.form-wizard-step.active');
+    	var progress_line = $(this).parents('.form-wizard').find('.form-wizard-progress-line');
+    	
+    	$(this).parents('fieldset').fadeOut(400, function() {
+    		// change icons
+    		current_active_step.removeClass('active').prev().removeClass('activated').addClass('active');
+    		// progress bar
+    		bar_progress(progress_line, 'left');
+    		// show previous step
+    		$(this).prev().fadeIn();
+    		// scroll window to beginning of the form
+			scroll_to_class( $('.form-wizard'), 20 );
+    	});
+    });
+    
+    // submit
+    $('.form-wizard').on('submit', function(e) {
+    	
+    	// fields validation
+    	$(this).find('.required').each(function() {
+    		if( $(this).val() == "" ) {
+    			e.preventDefault();
+    			$(this).addClass('input-error');
+    		}
+    		else {
+    			$(this).removeClass('input-error');
+    		}
+    	});
+    	// fields validation
+    	
+    });
+    
+    
+});
+
+
+
+
+
+// image uploader scripts 
+
+var $dropzone = $('.image_picker'),
+    $droptarget = $('.drop_target'),
+    $dropinput = $('#inputFile'),
+    $dropimg = $('.image_preview'),
+    $remover = $('[data-action="remove_current_image"]');
+
+$dropzone.on('dragover', function() {
+  $droptarget.addClass('dropping');
+  return false;
+});
+
+$dropzone.on('dragend dragleave', function() {
+  $droptarget.removeClass('dropping');
+  return false;
+});
+
+$dropzone.on('drop', function(e) {
+  $droptarget.removeClass('dropping');
+  $droptarget.addClass('dropped');
+  $remover.removeClass('disabled');
+  e.preventDefault();
+  
+  var file = e.originalEvent.dataTransfer.files[0],
+      reader = new FileReader();
+
+  reader.onload = function(event) {
+    $dropimg.css('background-image', 'url(' + event.target.result + ')');
+  };
+  
+  console.log(file);
+  reader.readAsDataURL(file);
+
+  return false;
+});
+
+$dropinput.change(function(e) {
+  $droptarget.addClass('dropped');
+  $remover.removeClass('disabled');
+  $('.image_title input').val('');
+  
+  var file = $dropinput.get(0).files[0],
+      reader = new FileReader();
+  
+  reader.onload = function(event) {
+    $dropimg.css('background-image', 'url(' + event.target.result + ')');
+  }
+  
+  reader.readAsDataURL(file);
+});
+
+$remover.on('click', function() {
+  $dropimg.css('background-image', '');
+  $droptarget.removeClass('dropped');
+  $remover.addClass('disabled');
+  $('.image_title input').val('');
+});
+
+$('.image_title input').blur(function() {
+  if ($(this).val() != '') {
+    $droptarget.removeClass('dropped');
+  }
+});
+
+// image uploader scripts
+</script>
+</body>
