--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -5,70 +5,72 @@
 	<title>Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/bootstrap/css/bootstrap.min.css' %}">
-
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-
-	<link rel="stylesheet" type="text/css" href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/animate/animate.css' %}">
-
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/css-hamburgers/hamburgers.min.css' %}">
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/animsition/css/animsition.min.css' %}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/select2/select2.min.css' %}">
-<!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/daterangepicker/daterangepicker.css' %}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/registration/login.css' %}">
 <!--===============================================================================================-->
 </head>
 <body>
 	
-	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
-				<form method="POST" class="login100-form validate-form flex-sb flex-w">{% csrf_token %}
-					<span class="login100-form-title p-b-32">
-						Account Login
-					</span>
+<div class="main-box">
+  <div class="slider-cont">
+  	<center><img src="https://bmsit.ac.in/assets/logo-5527329e306f832982eb5b10b8325a606bc2058ae61b4aa5705c8c2d4e436212.png" style="height: 167px !important; "></center><br>	
+    <center><h3 style="color: #FFF;">Careers at BMSIT</h3><center>
+  </div>
+  
+  
+  
+  <div class="form-cont">
 
-				{{ form.as_p }}
+    <div class="top-buttons">
+      <button class="to-signup top-active-button">
+        Sign Up
+      </button>
+      <button class="to-signin">
+        Sign In
+      </button>
+    </div>
+    
+    <div class="form form-signup">
+      <form action="/signup/" method="POST">{% csrf_token %}
+        <lable>USERNAME</lable>
+        <input type="text" name="username" id="id_username"
+               placeholder="Your desired username">
+        <lable>E-MAIL</lable>
+        <input type="email" name="email" id="id_email"
+               placeholder="Your e-mail">
+        <lable>PASSWORD</lable>
+        <input type="password" name="password1" id="id_password1"
+               placeholder="Your password">
+        <lable>CONFIRM PASSWORD</lable>
+        <input type="password" name="password2" id="id_password2"
+               placeholder="Your password">
+        <input type="submit"
+               class="form-btn"
+               value="Sign Up"/>
+        <a href="#" class="lined-link to-signin-link">I'm already member</a>
+      </form>
+    </div>
 
-					<div class="container-login100-form-btn">
-						<button type="submit" class="login100-form-btn">
-							Login
-						</button>
-					</div>
-
-				</form>
-			</div>
-		</div>
-	</div>
+    <div class="form form-signin">
+      <form action="/login/" method="POST">{% csrf_token %}
+        <lable>E-MAIL</lable>
+        <input type="email" name="username" id="id_username"
+               placeholder="Your e-mail">
+        <lable>PASSWORD</lable>
+        <input type="password" name="password" id="id_password"
+               placeholder="Your password">
+        <input type="submit"
+               class="form-btn"
+               value="Sign In"/>
+        <a href="#" class="lined-link to-signup-link">Create new account</a>
+      </form>
+    </div>
+  </div>
+  <div class="clear-fix"></div>
+</div>
 	
-
-	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
-	<script src="{% static 'js/vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'js/vendor/animsition/js/animsition.min.js' %}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'js/vendor/bootstrap/js/popper.js' %}"></script>
-	<script src="{% static 'js/vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'js/vendor/select2/select2.min.js' %}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'js/vendor/daterangepicker/moment.min.js' %}"></script>
-	<script src="{% static 'js/vendor/daterangepicker/daterangepicker.js' %}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'js/vendor/countdowntime/countdowntime.js' %}"></script>
-<!--===============================================================================================-->
-	<script src="{% static 'js/main.js' %}"></script>
+	<script src="{% static 'js/login.js' %}"></script>
 </body>
 </html>
