--- a/main/static/css/registration/login.css
+++ b/main/static/css/registration/login.css
@@ -21,7 +21,7 @@ body{background: #536192  }
   margin: 50px auto;
   border-radius: 8px;
   overflow: hidden;
-  background:linear-gradient(to right, #232f41, #374a62);
+  background-color:white !important;
 }
 
 .lined-link{
@@ -160,7 +160,7 @@ body{background: #536192  }
 .top-active-button {
   color: #fff !important;
   box-shadow: 0 0 20px #2a2a2a;
-  background: linear-gradient(#68dac7,#54c7ba) !important;
+  background: linear-gradient(#a91a32,#a91a32) !important;
   transition: all 0.3s ease;
 }
 
@@ -199,7 +199,7 @@ p.terms {
 input[type="text"],
 input[type="email"], 
 input[type="password"] {
-  color: #fff;
+  color: #000;
   width: 100%;
   border: none;
   font-size: 16px;
@@ -229,7 +229,7 @@ input.form-btn {
   border-radius: 35px;
   transition: all 0.3s linear;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.55);
-  background: linear-gradient(to right, #5bcdbe,#41ab9e);
+  background: linear-gradient(to right, #a91a32,#a91a32);
 }
 
 input.form-btn:hover{
