--- a/main/templates/educational.html
+++ b/main/templates/educational.html
@@ -46,17 +46,23 @@
             				<p>Documents</p>
             			</div>
             		</div>
-		<form role="form" action="/educational/" method="post" enctype="multipart/form-data">{% csrf_token %}		
+		<form role="form" action="/educational/" method="post" enctype="multipart/form-data">{% csrf_token %}	
                     <fieldset>
                     	<h2>Higher Secondary / SSLC</h2>
                     	<table class="table table-bordered">
                     		<tr>
+                          <th>Degree</th>
                     			<th>Institution Name</th>
                     			<th>Passing Year</th>
                     			<th>Percent ot Grade</th>
                     			<th>Marks Secured</th>
                     		</tr>
                     		<tr>
+                          <td>
+                              <div class="form-group">
+                            {% render_field form.Degree class="form-control required" %}
+                              </div>
+                          </td>
                     			<td>
 									<div class="form-group">
 			            			    {% render_field form.Institution_Name class="form-control required" %}
