--- a/main/templates/educational.html
+++ b/main/templates/educational.html
@@ -58,182 +58,12 @@
                     			<th>Marks Secured</th>
                     		</tr>
                     		<tr>
-                          <td>
-                              <div class="form-group">
-                            {% render_field form.Degree class="form-control required" %}
-                              </div>
-                          </td>
-                    			<td>
-									<div class="form-group">
-			            			    {% render_field form.Institution_Name class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Passing_Year type="date" class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Percent_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.maximum_marks_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                </tr>
-			                <tr>
-			                	<div class="form-group">
-			            			    {% render_field form.file_upload class="form-control required" %}
-			                    </div>
-			                </tr>
-                    	</table>
-                        <h2>Bachelors</h2>
-                        <table class="table table-bordered">
-                        	<tr>
-                        		<th>Degree</th>
-                        		<th>Specialisation</th>
-                        		<th>Institution Name</th>
-                        		<th>Passing Year</th>
-                        		<th>Percent or Grade</th>
-                        		<th>Marks Secured</th>
-                        	</tr>
-                        	<tr>
-			                    <td>
-			                        <div class="form-group">
-			            			    {% render_field form.Degree class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Specialisation class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Institution_Name class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Passing_Year class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Percent_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.maximum_marks_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                </tr>
-			                <tr>
-			                	<div class="form-group">
-			            			    {% render_field form.file_upload class="form-control required" %}
-			                    </div>
-			                </tr>
-                        </table>
-                        <h2>Masters</h2>
-                        <table class="table table-bordered">
-                        	<tr>
-                        		<th>Degree</th>
-                        		<th>Specialisation</th>
-                        		<th>Institution Name</th>
-                        		<th>Passing Year</th>
-                        		<th>Percent or Grade</th>
-                        		<th>Marks Secured</th>
-                        	</tr>
-                        	<tr>
-			                    <td>
-			                        <div class="form-group">
-			            			    {% render_field form.Degree class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Specialisation class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Institution_Name class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Passing_Year class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Percent_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.maximum_marks_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                </tr>
-			                <tr>
-			                	<div class="form-group">
-			            			    {% render_field form.file_upload class="form-control required" %}
-			                    </div>
-			                </tr>
-                        </table>
-                        <h2>Others</h2>
-                        <table class="table table-bordered">
-                        	<tr>
-                        		<th>Degree</th>
-                        		<th>Specialisation</th>
-                        		<th>Institution Name</th>
-                        		<th>Passing Year</th>
-                        		<th>Percent or Grade</th>
-                        		<th>Marks Secured</th>
-                        	</tr>
-                        	<tr>
-			                    <td>
-			                        <div class="form-group">
-			            			    {% render_field form.Degree class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Specialisation class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Institution_Name class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Passing_Year class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.Percent_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                    <td>
-									<div class="form-group">
-			            			    {% render_field form.maximum_marks_or_grade class="form-control required" %}
-			                        </div>
-			                    </td>
-			                </tr>
-			                <tr>
-			                	<div class="form-group">
-			            			    {% render_field form.file_upload class="form-control required" %}
-			                    </div>
-			                </tr>
-                        </table>
+                          {{ formset.management_form }}
+                          {% for form in formset.forms %}
+                          {{ form }}
+                          {% endfor %}
+                        </tr>
+                      </table>
                         <div class="form-wizard-buttons">
                             <button type="submit" class="btn btn-next">Submit</button>
                         </div>
