--- a/main/templates/educational.html
+++ b/main/templates/educational.html
@@ -49,19 +49,51 @@
 		<form role="form" action="/educational/" method="post" enctype="multipart/form-data">{% csrf_token %}	
                     <fieldset>
                     	<h2>Higher Secondary / SSLC</h2>
-                    	<table class="table table-bordered">
+                    	<table id="sslc_table" class="table table-bordered">
                     		<tr>
                           <th>Degree</th>
+                          <th>Specialisation</th>
                     			<th>Institution Name</th>
                     			<th>Passing Year</th>
                     			<th>Percent ot Grade</th>
                     			<th>Marks Secured</th>
+                          <th>Upload File</th>
                     		</tr>
-                    		<tr>
-                          {{ formset.management_form }}
-                          {% for form in formset.forms %}
-                          {{ form }}
-                          {% endfor %}
+                        <tr>
+                          <td>{% render_field form.Degree id="id_form-0-Degree" class="form-control required" %}</td>
+                          <td>{% render_field form.Specialisation id="id_form-0-Specialisation" class="form-control required" %}</td>
+                          <td>{% render_field form.Institution_Name id="id_form-0-Institution_Name" class="form-control required" %}</td>
+                          <td>{% render_field form.Passing_Year id="id_form-0-Passing_Year" class="form-control required" %}</td>
+                          <td>{% render_field form.Percent_or_grade id="id_form-0-Percent_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.maximum_marks_or_grade id="id_form-0-maximum_marks_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.file_upload id="id_form-0-file_upload" class="form-control required" %}</td>
+                        </tr>
+                        <tr>
+                          <td>{% render_field form.Degree id="id_form-1-Degree" class="form-control" %}</td>
+                          <td>{% render_field form.Specialisation id="id_form-1-Specialisation" class="form-control" %}</td>
+                          <td>{% render_field form.Institution_Name id="id_form-1-Institution_Name" class="form-control" %}</td>
+                          <td>{% render_field form.Passing_Year id="id_form-1-Passing_Year" class="form-control" %}</td>
+                          <td>{% render_field form.Percent_or_grade id="id_form-1-Percent_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.maximum_marks_or_grade id="id_form-1-maximum_marks_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.file_upload id="id_form-1-file_upload" class="form-control required" %}</td>
+                        </tr>
+                        <tr>
+                          <td>{% render_field form.Degree id="id_form-2-Degree" class="form-control required" %}</td>
+                          <td>{% render_field form.Specialisation id="id_form-2-Specialisation" class="form-control required" %}</td>
+                          <td>{% render_field form.Institution_Name id="id_form-2-Institution_Name" class="form-control required" %}</td>
+                          <td>{% render_field form.Passing_Year id="id_form-2-Passing_Year" class="form-control required" %}</td>
+                          <td>{% render_field form.Percent_or_grade id="id_form-2-Percent_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.maximum_marks_or_grade id="id_form-2-maximum_marks_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.file_upload id="id_form-2-file_upload" class="form-control required" %}</td>
+                        </tr>
+                        <tr>
+                          <td>{% render_field form.Degree id="id_form-3-Degree" class="form-control required" %}</td>
+                          <td>{% render_field form.Specialisation id="id_form-3-Specialisation" class="form-control required" %}</td>
+                          <td>{% render_field form.Institution_Name id="id_form-3-Institution_Name" class="form-control required" %}</td>
+                          <td>{% render_field form.Passing_Year id="id_form-3-Passing_Year" class="form-control required" %}</td>
+                          <td>{% render_field form.Percent_or_grade id="id_form-3-Percent_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.maximum_marks_or_grade id="id_form-3-maximum_marks_or_grade" class="form-control required" %}</td>
+                          <td>{% render_field form.file_upload id="id_form-3-file_upload" class="form-control required" %}</td>
                         </tr>
                       </table>
                         <div class="form-wizard-buttons">
@@ -75,291 +107,16 @@
             
     </div>
 </section>
-<script>
-function addField (argument) {
-       var myTable = document.getElementById("research");
-       var currentIndex = myTable.rows.length;
-       var currentRow = myTable.insertRow(-1);
-   
-       var university = document.createElement("input");
-       university.setAttribute("name", "Name_university" + currentIndex);
-university.setAttribute("class", "form-control");
-   
-       var area = document.createElement("input");
-       area.setAttribute("name", "area_research" + currentIndex);
-area.setAttribute("class", "form-control");
-   
-       var research_to = document.createElement("input");
-       research_to.setAttribute("name", "from_date" + currentIndex);
-research_to.setAttribute("class", "form-control");
-     
-     var research_from = document.createElement("input");
-       research_from.setAttribute("name", "to_date" + currentIndex);
-research_from.setAttribute("class", "form-control");
-   
-     var research_total = document.createElement("input");
-       research_total.setAttribute("name", "total_duration" + currentIndex);
-research_total.setAttribute("class", "form-control");
 
-var int_conf = document.createElement("input");
-       int_conf.setAttribute("name", "total_internationalConf" + currentIndex);
-int_conf.setAttribute("class", "form-control");
-
-var title_paper = document.createElement("input");
-       title_paper.setAttribute("name", "title_paper" + currentIndex);
-title_paper.setAttribute("class", "form-control");
-
-var conf = document.createElement("input");
-       conf.setAttribute("name", "conf_International" + currentIndex);
-conf.setAttribute("class", "form-control");
-
-var year = document.createElement("input");
-       year.setAttribute("name", "year_month_pub" + currentIndex);
-year.setAttribute("class", "form-control");
-  
-
-       var currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(university);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(area);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_to);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_from);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_total);
-
-	currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(int_conf);
-
-currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(title_paper);
-
-currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(conf);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(year);
-     }
-
-
-function addField1 (argument) {
-       var myTable = document.getElementById("conference");
-       var currentIndex = myTable.rows.length;
-       var currentRow = myTable.insertRow(-1);
-   
-       var university = document.createElement("input");
-       university.setAttribute("name", "conf_conducted_org" + currentIndex);
-university.setAttribute("class", "form-control");
-   
-       var area = document.createElement("input");
-       area.setAttribute("name", "total_experience" + currentIndex);
-area.setAttribute("class", "form-control");
-   
-       var research_to = document.createElement("input");
-       research_to.setAttribute("name", "university" + currentIndex);
-research_to.setAttribute("class", "form-control");
-     
-     var research_from = document.createElement("input");
-       research_from.setAttribute("name", "designation" + currentIndex);
-research_from.setAttribute("class", "form-control");
-   
-     var research_total = document.createElement("input");
-       research_total.setAttribute("name", "from_date" + currentIndex);
-research_total.setAttribute("class", "form-control");
-
-var int_conf = document.createElement("input");
-       int_conf.setAttribute("name", "to_date" + currentIndex);
-int_conf.setAttribute("class", "form-control");
-
-var title_paper = document.createElement("input");
-       title_paper.setAttribute("name", "total_duration" + currentIndex);
-title_paper.setAttribute("class", "form-control");
-
-  
-
-       var currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(university);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(area);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_to);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_from);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_total);
-
-	currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(int_conf);
-
-currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(title_paper);
-     }
-
-
-function addField2 (argument) {
-       var myTable = document.getElementById("affiliation");
-       var currentIndex = myTable.rows.length;
-       var currentRow = myTable.insertRow(-1);
-   
-       var university = document.createElement("input");
-       university.setAttribute("name", "profbody" + currentIndex);
-university.setAttribute("class", "form-control");
-   
-       var area = document.createElement("input");
-       area.setAttribute("name", "year" + currentIndex);
-area.setAttribute("class", "form-control");
-   
-       var research_to = document.createElement("input");
-       research_to.setAttribute("name", "no_member" + currentIndex);
-research_to.setAttribute("class", "form-control");
-     
-     var research_from = document.createElement("input");
-       research_from.setAttribute("name", "year_selection" + currentIndex);
-research_from.setAttribute("class", "form-control");
-
-       var currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(university);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(area);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_to);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_from);
-     }
-
-
-function addField3 (argument) {
-       var myTable = document.getElementById("industrial");
-       var currentIndex = myTable.rows.length;
-       var currentRow = myTable.insertRow(-1);
-   
-       var university = document.createElement("input");
-       university.setAttribute("name", "organisation" + currentIndex);
-university.setAttribute("class", "form-control");
-   
-       var area = document.createElement("input");
-       area.setAttribute("name", "position_held" + currentIndex);
-area.setAttribute("class", "form-control");
-   
-       var research_to = document.createElement("input");
-       research_to.setAttribute("name", "from_date" + currentIndex);
-research_to.setAttribute("class", "form-control");
-     
-     var research_from = document.createElement("input");
-       research_from.setAttribute("name", "to_date" + currentIndex);
-research_from.setAttribute("class", "form-control");
-
-var experience = document.createElement("input");
-       experience.setAttribute("name", "experience_years" + currentIndex);
-experience.setAttribute("class", "form-control");
-
-       var currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(university);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(area);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_to);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_from);
-
-	currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(experience);
-     }
-
-
-function addField4 (argument) {
-       var myTable = document.getElementById("awards");
-       var currentIndex = myTable.rows.length;
-       var currentRow = myTable.insertRow(-1);
-   
-       var university = document.createElement("input");
-       university.setAttribute("name", "Spec_awards_particulars" + currentIndex);
-university.setAttribute("class", "form-control");
-   
-       var area = document.createElement("input");
-       area.setAttribute("name", "state" + currentIndex);
-area.setAttribute("class", "form-control");
-   
-       var research_to = document.createElement("input");
-       research_to.setAttribute("name", "national" + currentIndex);
-research_to.setAttribute("class", "form-control");
-     
-     var research_from = document.createElement("input");
-       research_from.setAttribute("name", "international" + currentIndex);
-research_from.setAttribute("class", "form-control");
-
-
-       var currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(university);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(area);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_to);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_from);
-     }		
-
-function addField5 (argument) {
-       var myTable = document.getElementById("teaching");
-       var currentIndex = myTable.rows.length;
-       var currentRow = myTable.insertRow(-1);
-   
-       var university = document.createElement("input");
-       university.setAttribute("name", "university_name" + currentIndex);
-university.setAttribute("class", "form-control");
-   
-       var area = document.createElement("input");
-       area.setAttribute("name", "designation" + currentIndex);
-area.setAttribute("class", "form-control");
-   
-       var research_to = document.createElement("input");
-       research_to.setAttribute("name", "from_date_teaching" + currentIndex);
-research_to.setAttribute("class", "form-control");
-     
-     var research_from = document.createElement("input");
-       research_from.setAttribute("name", "to_date_teaching" + currentIndex);
-research_from.setAttribute("class", "form-control");
-
-var duration = document.createElement("input");
-      duration.setAttribute("name", "total_duration_teaching" + currentIndex);
-duration.setAttribute("class", "form-control");
-
-
-       var currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(university);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(area);
-   
-       currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_to);
-   
-     currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(research_from);
-
-	currentCell = currentRow.insertCell(-1);
-       currentCell.appendChild(duration);
-     }		
-</script>
-
+<script type="text/javascript">
+    $(function() {
+         $('#sslc_table tbody tr').formset({
+            addText: '<button class="btn btn-success" type="button">Add Size</button>',
+            deleteText: '<button class="btn btn-danger btn-sm" type="button">Delete</button>',
+            prefix: '{{ formset.prefix }}'
+        });
+    });
+    </script>
 <script type="text/javascript">
 	"use strict";
 function scroll_to_class(element_class, removed_height) {
