--- a/main/templates/conference.html
+++ b/main/templates/conference.html
@@ -45,27 +45,29 @@
 						</div>
 					</div>
 		<form role="form" action="/conference/" method="post" enctype="multipart/form-data">{% csrf_token %}		
-					<fieldset style="color:black;">
-						<table id="conference" class="table table-bordered">
-							<tr>
-								<th>University Name</th>
-								<th>Designation</th>
-								<th>From Date</th>
-								<th>To Date</th>
-								<th>Total Duration</th>
-							</tr>
-							<tr>
-								<td>{% render_field form.university class="form-control required" %}</td>
-								<td>{% render_field form.designation class="form-control required" %}</td>
-								<td>{% render_field form.from_date class="form-control required" %}</td>
-								<td>{% render_field form.total_duration class="form-control required" %}</td>
-								<td>{% render_field form.total_duration class="form-control required" %}</td>
-							</tr>
-						</table>
-						<div class="form-wizard-buttons">
-							<button type="submit" class="btn btn-next">Submit</button>
-						</div>
-					</fieldset>
+					<h2>Please Enter Your Conference Attended Details Below</h2>
+        {{ formset.management_form }}
+        <div id="form_set">
+            {% for form in formset.forms %}
+                <table class='no_error'>
+                    {{ form.as_table }}
+                </table>
+            {% endfor %}
+        </div>
+        <input type="button" class="btn btn-primary" value="Add More" id="add_more">
+        <div id="empty_form" style="display:none">
+            <table class='no_error'>
+                {{ formset.empty_form.as_table }}
+            </table>
+        </div>
+        <script>
+            $('#add_more').click(function() {
+                var form_idx = $('#id_form-TOTAL_FORMS').val();
+                $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+                $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+            });
+        </script>
+        <button type="submit" class="btn btn-next">Submit</button>
 				</form>
 				<!-- Form Wizard -->
 			</div>
