--- a/main/templates/educational.html
+++ b/main/templates/educational.html
@@ -47,59 +47,30 @@
             			</div>
             		</div>
 		<form role="form" action="/educational/" method="post" enctype="multipart/form-data">{% csrf_token %}	
-                    <fieldset>
-                    	<h2>Higher Secondary / SSLC</h2>
-                    	<table id="sslc_table" class="table table-bordered">
-                    		<tr>
-                          <th>Degree</th>
-                          <th>Specialisation</th>
-                    			<th>Institution Name</th>
-                    			<th>Passing Year</th>
-                    			<th>Percent ot Grade</th>
-                    			<th>Marks Secured</th>
-                          <th>Upload File</th>
-                    		</tr>
-                        <tr>
-                          <td>{% render_field form.Degree id="id_form-0-Degree" class="form-control required" %}</td>
-                          <td>{% render_field form.Specialisation id="id_form-0-Specialisation" class="form-control required" %}</td>
-                          <td>{% render_field form.Institution_Name id="id_form-0-Institution_Name" class="form-control required" %}</td>
-                          <td>{% render_field form.Passing_Year id="id_form-0-Passing_Year" class="form-control required" %}</td>
-                          <td>{% render_field form.Percent_or_grade id="id_form-0-Percent_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.maximum_marks_or_grade id="id_form-0-maximum_marks_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.file_upload id="id_form-0-file_upload" class="form-control required" %}</td>
-                        </tr>
-                        <tr>
-                          <td>{% render_field form.Degree id="id_form-1-Degree" class="form-control" %}</td>
-                          <td>{% render_field form.Specialisation id="id_form-1-Specialisation" class="form-control" %}</td>
-                          <td>{% render_field form.Institution_Name id="id_form-1-Institution_Name" class="form-control" %}</td>
-                          <td>{% render_field form.Passing_Year id="id_form-1-Passing_Year" class="form-control" %}</td>
-                          <td>{% render_field form.Percent_or_grade id="id_form-1-Percent_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.maximum_marks_or_grade id="id_form-1-maximum_marks_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.file_upload id="id_form-1-file_upload" class="form-control required" %}</td>
-                        </tr>
-                        <tr>
-                          <td>{% render_field form.Degree id="id_form-2-Degree" class="form-control required" %}</td>
-                          <td>{% render_field form.Specialisation id="id_form-2-Specialisation" class="form-control required" %}</td>
-                          <td>{% render_field form.Institution_Name id="id_form-2-Institution_Name" class="form-control required" %}</td>
-                          <td>{% render_field form.Passing_Year id="id_form-2-Passing_Year" class="form-control required" %}</td>
-                          <td>{% render_field form.Percent_or_grade id="id_form-2-Percent_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.maximum_marks_or_grade id="id_form-2-maximum_marks_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.file_upload id="id_form-2-file_upload" class="form-control required" %}</td>
-                        </tr>
-                        <tr>
-                          <td>{% render_field form.Degree id="id_form-3-Degree" class="form-control required" %}</td>
-                          <td>{% render_field form.Specialisation id="id_form-3-Specialisation" class="form-control required" %}</td>
-                          <td>{% render_field form.Institution_Name id="id_form-3-Institution_Name" class="form-control required" %}</td>
-                          <td>{% render_field form.Passing_Year id="id_form-3-Passing_Year" class="form-control required" %}</td>
-                          <td>{% render_field form.Percent_or_grade id="id_form-3-Percent_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.maximum_marks_or_grade id="id_form-3-maximum_marks_or_grade" class="form-control required" %}</td>
-                          <td>{% render_field form.file_upload id="id_form-3-file_upload" class="form-control required" %}</td>
-                        </tr>
-                      </table>
-                        <div class="form-wizard-buttons">
-                            <button type="submit" class="btn btn-next">Submit</button>
-                        </div>
-                    </fieldset>
+      <h2>Please Enter Your Educational Qualifications Below</h2>
+        {{ formset.management_form }}
+        <div id="form_set">
+            {% for form in formset.forms %}
+                <table class='no_error'>
+                    {{ form.as_table }}
+                </table>
+            {% endfor %}
+        </div>
+        <input type="button" class="btn btn-primary" value="Add More" id="add_more">
+        <div id="empty_form" style="display:none">
+            <table class='no_error'>
+                {{ formset.empty_form.as_table }}
+            </table>
+        </div>
+        <script>
+            $('#add_more').click(function() {
+                var form_idx = $('#id_form-TOTAL_FORMS').val();
+                $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+                $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+            });
+        </script>
+        <button type="submit" class="btn btn-next">Submit</button>
+                    
 		</form>
 				<!-- Form Wizard -->
             </div>
@@ -107,16 +78,9 @@
             
     </div>
 </section>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{% static 'js/jquery.formset.js' %}"></script>
 
-<script type="text/javascript">
-    $(function() {
-         $('#sslc_table tbody tr').formset({
-            addText: '<button class="btn btn-success" type="button">Add Size</button>',
-            deleteText: '<button class="btn btn-danger btn-sm" type="button">Delete</button>',
-            prefix: '{{ formset.prefix }}'
-        });
-    });
-    </script>
 <script type="text/javascript">
 	"use strict";
 function scroll_to_class(element_class, removed_height) {
