--- a/main/templates/reference.html
+++ b/main/templates/reference.html
@@ -45,32 +45,30 @@
             			</div>
             		</div>
 		<form role="form" action="/reference/" method="post" enctype="multipart/form-data">{% csrf_token %}		
-                    <fieldset style="color:black;">
-                    
-                        <table class="table table-bordered">
-                          <tr>
-                            <th>Name</th>
-                            <th>Position</th>
-                            <th>Designation</th>
-                            <th>Affiliation</th>
-                            <th>Contact number</th>
-                            <th>Email ID</th>
-                            <th>Address</th>
-                          </tr>
-                          <tr>
-                            <td>{% render_field form.name class="form-control required" %}</td>
-                            <td>{% render_field form.position class="form-control required" %}</td>
-                            <td>{% render_field form.designation class="form-control required" %}</td>
-                            <td>{% render_field form.affiliation class="form-control required" %}</td>
-                            <td>{% render_field form.contact_no class="form-control required" %}</td>
-                            <td>{% render_field form.email class="form-control required" %}</td>
-                            <td>{% render_field form.address class="form-control required" %}</td>
-                          </tr>
-                        </table>
-                    </fieldset>
-                    <div class="form-wizard-buttons">
-                        <button type="submit" class="btn btn-next">Submit</button>
-                    </div>
+                    <h2>Please Enter Your Reference Details Below</h2>
+        {{ formset.management_form }}
+        <div id="form_set">
+            {% for form in formset.forms %}
+                <table class='no_error'>
+                    {{ form.as_table }}
+                </table>
+            {% endfor %}
+        </div>
+        <input type="button" class="btn btn-primary" value="Add More" id="add_more">
+        <div id="empty_form" style="display:none">
+            <table class='no_error'>
+                {{ formset.empty_form.as_table }}
+            </table>
+        </div>
+        <script>
+            $('#add_more').click(function() {
+                var form_idx = $('#id_form-TOTAL_FORMS').val();
+                $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
+                $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+            });
+        </script>
+        <button type="submit" class="btn btn-next">Submit</button>
+
 				        </form>
 				<!-- Form Wizard -->
             </div>
