--- a/main/templates/conference.html
+++ b/main/templates/conference.html
@@ -8,6 +8,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+	<style>
+input {
+  border:solid 1px #d9d9d9 !important;
+}
+</style>
 </head>
 <body>
 <section class="form-box" >
