--- a/main/templates/done.html
+++ b/main/templates/done.html
@@ -103,8 +103,8 @@ h1{
       <h1>Thank you !</h1>
       <p>Thanks for submitting your application.  </p>
       <br>
-      <a href="https://careers.bmsit.ac.in" class="go-home">
-      Go home
+      <a style="text-decoration:none;" href="/print" class="go-home">
+      Print Your Application
       </a>
     </div>
     
