--- a/main/templates/print.html
+++ b/main/templates/print.html
@@ -1,1 +1,265 @@
-<p>{{faculty.first_name}}</p>
+<!DOCTYPE HTML>
+{% load widget_tweaks %}
+{% load static %}
+<head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+</head>
+<body>
+	<h3 style="padding:2%;text-align:center;">Print Your Application Form</h3>
+<table class="table table bordered">
+	<tr>
+		<th><b>FIELDS</b></th>
+		<th><b>VALUES</b></th>
+	</tr>
+	<tr>
+		<td>First Name</td>
+		<td>{{faculty.first_name}}</td>
+	</tr>
+	<tr>
+		<td>Father's Name</td>
+		<td>{{faculty.fathers_name}}</td>
+	</tr>
+	<tr>
+		<td>Email</td>
+		<td>{{faculty.email}}</td>
+	</tr>
+	<tr>
+		<td>Phone</td>
+		<td>{{faculty.phone}}</td>
+	</tr>
+	<tr>
+		<td>Position Applied For</td>
+		<td>{{faculty.position}}</td>
+	</tr>
+	<tr>
+		<td>Department</td>
+		<td>{{faculty.department}}</td>
+	</tr>
+	<tr>
+		<td>Date of Birth</td>
+		<td>{{faculty.date_of_birth}}</td>
+	</tr>
+	<tr>
+		<td>Age</td>
+		<td>{{faculty.age}}</td>
+	</tr>
+	<tr>
+		<td>Place</td>
+		<td>{{faculty.place}}</td>
+	</tr>
+	<tr>
+		<td>Religion</td>
+		<td>{{faculty.religion}}</td>
+	</tr>
+	<tr>
+		<td>Reservation</td>
+		<td>{{faculty.reservation}}</td>
+	</tr>
+	<tr>
+		<td>Category</td>
+		<td>{{faculty.category}}</td>
+	</tr>
+	<tr>
+		<td>Nationality</td>
+		<td>{{faculty.nationality}}</td>
+	</tr>
+</table>
+	<h3 style="text-align:center;">Courses</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Degree</th>
+			<th>Specialisation</th>
+			<th>Institution Name</th>
+			<th>Passing Year</th>
+			<th>Percent or Grade</th>
+			<th>Marks Obtained</th>
+		</tr>
+		{%for course in courses %}
+		<tr>
+			<td>{{course.Degree}}</td>
+			<td>{{course.Specialisation}}</td>
+			<td>{{course.Institution_Name}}</td>
+			<td>{{course.Passing_Year}}</td>
+			<td>{{course.Percent_or_grade}}</td>
+			<td>{{course.maximum_marks_or_grade}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Industrial</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Organisation</th>
+			<th>Position Held</th>
+			<th>From</th>
+			<th>To</th>
+			<th>Experience (in years)</th>
+		</tr>
+		{%for ind in industrial %}
+		<tr>
+			<td>{{ind.organisation}}</td>
+			<td>{{ind.position_held}}</td>
+			<td>{{ind.from_date}}</td>
+			<td>{{ind.to_date}}</td>
+			<td>{{ind.experience_years}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Research</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Teaching Experience</th>
+			<th>University Name</th>
+			<th>Area of Research</th>
+			<th>From</th>
+			<th>To</th>
+			<th>Total Duration</th>
+			<th>Total International Conf</th>
+			<th>Title Paper</th>
+			<th>Conf International</th>
+			<th>Year of Publishing</th>
+		</tr>
+		{%for res in research %}
+		<tr>
+			<td>{{res.total_experience}}</td>
+			<td>{{res.university_name}}</td>
+			<td>{{res.area_reasearch}}</td>
+			<td>{{res.from_date}}</td>
+			<td>{{res.to_date}}</td>
+			<td>{{res.total_duration}}</td>
+			<td>{{res.total_internationalConf}}</td>
+			<td>{{res.title_paper}}</td>
+			<td>{{res.conf_International}}</td>
+			<td>{{res.year_month_pub}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Teaching</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>University Name</th>
+			<th>Designation</th>
+			<th>From</th>
+			<th>To</th>
+			<th>Total Duration</th>
+		</tr>
+		{%for teach in teaching %}
+		<tr>
+			<td>{{teach.university_name}}</td>
+			<td>{{teach.designation}}</td>
+			<td>{{teach.from_date}}</td>
+			<td>{{teach.to_date}}</td>
+			<td>{{teach.total_duration}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Conference</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Organisation</th>
+			<th>Total Duration</th>
+			<th>University</th>
+			<th>Designation</th>
+			<th>From</th>
+			<th>To</th>
+			<th>Total Duration</th>
+		</tr>
+		{%for con in conference %}
+		<tr>
+			<td>{{con.conf_conducted_org}}</td>
+			<td>{{con.total_experience}}</td>
+			<td>{{con.university}}</td>
+			<td>{{con.designation}}</td>
+			<td>{{con.from_date}}</td>
+			<td>{{con.to_date}}</td>
+			<td>{{con.total_duration}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Reference</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Name</th>
+			<th>Position</th>
+			<th>Designation</th>
+			<th>Affiliation</th>
+			<th>Contact Number</th>
+			<th>Email</th>
+			<th>Address</th>
+		</tr>
+		{%for ref in referrals %}
+		<tr>
+			<td>{{ref.name}}</td>
+			<td>{{ref.position}}</td>
+			<td>{{ref.designation}}</td>
+			<td>{{ref.affiliation}}</td>
+			<td>{{ref.contact_no}}</td>
+			<td>{{ref.email}}</td>
+			<td>{{ref.address}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Membership</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Type of Member</th>
+			<th>Professional Body</th>
+			<th>Membership number</th>
+			<th>Annual</th>
+		</tr>
+		{%for mem in membership %}
+		<tr>
+			<td>{{mem.type_of_member}}</td>
+			<td>{{mem.professional_body}}</td>
+			<td>{{mem.membership_no}}</td>
+			<td>{{mem.annual}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Awards</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Particulars</th>
+			<th>State</th>
+			<th>National</th>
+			<th>International</th>
+		</tr>
+		{%for award in awards %}
+		<tr>
+			<td>{{award.Spec_awards_particulars}}</td>
+			<td>{{award.state}}</td>
+			<td>{{award.national}}</td>
+			<td>{{award.international}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h3 style="text-align:center;">Special Achievements</h3>
+	<table class="table table-bordered">
+		<tr>
+			<th>Community Service</th>
+			<th>Industry Related</th>
+			<th>University Assginment</th>
+			<th>Administration</th>
+		</tr>
+		{%for achievement in achievements %}
+		<tr>
+			<td>{{achievement.community_service}}</td>
+			<td>{{achievement.industry_related}}</td>
+			<td>{{achievement.university_assignment}}</td>
+			<td>{{achievement.administration}}</td>
+		</tr>
+	{% endfor %}
+	</table>
+	<h4 style="text-align:center;">I hereby declare that the information furnished in this application form is true to the best of my knowledge and belief.</h4><br>
+<center><button id="print" type="button" class="btn btn-primary">Print Form</button></center>
+
+<script>
+$('#print').click(function() {
+	window.print();
+})
+</script>
